# podio

./: CMakeLists.txt  init.sh  init_macos.sh
fastsim/: CMakeLists.txt  datalayout.yaml  writeSim.cpp
fastsim/datamodel/: BareParticle.h  GenVertex.cc  GenVertex.h  GenVertexCollection.cc  GenVertexCollection.h  GenVertexConst.cc  GenVertexConst.h  GenVertexData.h  GenVertexObj.cc  GenVertexObj.h  LorentzVectorMomentum.h  LorentzVectorPosition.h  MCParticle.cc  MCParticle.h  MCParticleCollection.cc  MCParticleCollection.h  MCParticleConst.cc  MCParticleConst.h  MCParticleData.h  MCParticleObj.cc  MCParticleObj.h  Particle.cc  Particle.h  ParticleCollection.cc  ParticleCollection.h  ParticleConst.cc  ParticleConst.h  ParticleData.h  ParticleObj.cc  ParticleObj.h  ThreeVector.h  selection.xml
python/: podio_class_generator.py
tests/: datalayout.yaml  unittest.cpp  write.cpp
tests/datamodel/: ExampleForCyclicDependency1Collection.cc  ExampleForCyclicDependency2Collection.cc  ExampleWithComponentConst.h  ExampleWithOneRelationCollection.cc
